@@ -16,6 +16,8 @@
   - calling Exit() in a bound script or person script or trigger
     (etc.) no longer gives an error
   - added Eric Duvic's circles.js system script
+  - made Clock.getTime() return an array if you pass true to it.
+    (August Bigelow)
 
 2003.02.05
   - fixed GrabImage crash bug in standard16 and interpolate16
